--- a/resources/css/styleLogin.css
+++ b/resources/css/styleLogin.css
@@ -37,8 +37,17 @@ body{
 .container .form{
   padding: 2rem;
 }
+
+.login-key-img {
+  display: block;
+  margin: 0 auto 30px auto;
+  width: 70px;
+  height: 70px;
+  border-radius: 12px;
+}
+
 .form header{
-  font-size: 2rem;
+  font-size: 2.5rem;
   font-weight: 500;
   text-align: center;
   margin-bottom: 1.5rem;
